# panda_patrol

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  SCRATCH.md  __init__.py  install_dep.sh  pyproject.toml  requirements.txt  setup.cfg
examples/airflow/: README.md  install.sh  setup.sh  start.sh
examples/airflow/dags/: get_values.py
examples/dagster/: .env  README.md  hackernews_top_stories.csv  hackernews_top_story_ids.json  hello-dagster.py  requirements.txt
examples/dbt_pipeline/: .env  .user.yml  README.md  dbt_project.yml  profiles.yml  requirements.txt
examples/dbt_pipeline/models/: orders_view.sql  (+5 more)
examples/prefect/: README.md  requirements.txt  titanic.py
panda_patrol/: __init__.py  __main__.py  constants.py
panda_patrol/ai/: __init__.py  generate_data_tests.py
panda_patrol/anomaly_detection/: __init__.py  basic_anomaly_detection.py
panda_patrol/backend/: app.py  models.py
panda_patrol/checks/: __init__.py  accuracy.py  check.py  completeness.py  duplicate.py  enums.py  freshness.py  utils.py  volume.py
panda_patrol/conf/: __init__.py  default_settings.py  settings.py
panda_patrol/data/: patrol_result.py
panda_patrol/dbt/: __main__.py  dbt_to_panda_patrol.py  find_dbt_target_results.py  main.py  run_dbt.py
panda_patrol/headers/: get_headers.py
panda_patrol/parameters/: __init__.py  adjustable_parameter.py  static_parameter.py
panda_patrol/patrol_group/: reset_patrol_group.py
panda_patrol/patrols/: __init__.py  monitor.py  patrol.py
panda_patrol/profilers/: __init__.py  basic.py  save_report.py
panda_patrol/settings/: get_settings.py
panda_patrol/users/: get_user.py
panda_patrol/utils/: email_utils.py  func_utils.py  init_utils.py  main_utils.py  patrol_utils.py
scripts/: clear.sh  package.sh  setup.sh  upload.sh
tests/: __init__.py  patrol_settings.py  run.py
(+35 files in other folders)
