[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "panda-patrol"
version = "0.0.5"
authors = [
  { name="Ivan Zhang", email="ivanzhangofficial@gmail.com" },
]
description = "ðŸ¼ Patrol your data tests"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/aivanzhang/panda-patrol"
"Bug Tracker" = "https://github.com/aivanzhang/panda-patrol/issues"

[options.packages.find]
where = "panda-patrol"