[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "panda-patrol"
version = "0.0.87"
authors = [
  { name="Ivan Zhang", email="ivanzhangofficial@gmail.com" },
]
description = "ðŸ¼ Patrol your data tests"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
  "fastapi",
  "sqlalchemy",
  "requests",
  "uvicorn[standard]",
  "python-dotenv",
  "slack_sdk",
]

[project.urls]
"Homepage" = "https://github.com/aivanzhang/panda-patrol"
"Bug Tracker" = "https://github.com/aivanzhang/panda-patrol/issues"

[options.packages.find]
where = "panda-patrol"